UtahLiveDataTest/src/objects/LEATitleIIAStatus__c.object
<CustomObject>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>LEA Title IIA Statuses</relationshipLabel>
        <relationshipName>LEA_Title_IIA_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEATotalPercent__c</fullName>
        <label>LEA Total Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LEA_Phase_Code__c</fullName>
        <label>LEA Phase Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LEA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LEA Title IIA Statuses</relationshipLabel>
        <relationshipName>LEA_Title_IIA_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LowIncomePercent__c</fullName>
        <label>Low Income Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USBEForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>USBEForm</label>
        <referenceTo>USBEForm__c</referenceTo>
        <relationshipLabel>LEA Title IIA Statuses</relationshipLabel>
        <relationshipName>LEA_Title_IIA_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LEA Title IIA Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LEATitle2Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LEA Title IIA Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>